[2018-05-26 02:32:09 +0200]  Text changes                                                               karasu      {58be1882}
[2018-05-25 20:17:58 +0200]  Umount cache folder when loading cache page                                karasu      {b1691154}
[2018-05-25 20:12:13 +0200]  Use parted.formatBytes                                                     karasu      {9117c6e3}
[2018-05-25 19:34:27 +0200]  Use full page width                                                        karasu      {68b65c30}
[2018-05-25 19:27:18 +0200]  Call cache page (between features and mirrors pages)                       karasu      {d9fe018d}
[2018-05-25 19:21:44 +0200]  Ready for testing                                                          karasu      {a005b7e6}
[2018-05-25 11:00:02 +0200]  Working on it. We need a list of partitions, not devices                   karasu      {7aeaed48}
[2018-05-24 20:32:33 +0200]  Adding a new cache page                                                    karasu      {346fb300}