@@ -1,3 +1,4 @@
+[2018-05-26 02:37:58 +0200]  Try to catch disklabel exception (parted)                                  karasu      {e979138f}
 [2018-05-26 02:32:09 +0200]  Text changes                                                               karasu      {58be1882}
 [2018-05-25 20:17:58 +0200]  Umount cache folder when loading cache page                                karasu      {b1691154}
 [2018-05-25 20:12:13 +0200]  Use parted.formatBytes                                                     karasu      {9117c6e3}
